[package]
name = "readeckbot"
version = "0.1.0"
edition = "2024"

[dependencies]
reqwest = { version = "0.12", default-features = false, features = [
    "http2",
    "charset",
    "rustls-tls",
] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
log = "0.4"
pretty_env_logger = "0.5.0"
regex = "1"
teloxide = { version = "0.17", default-features = false, features = [
    "ctrlc_handler",
    "macros",
    "rustls",
] }
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
